<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.main.kit.header.Header
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/waterfall"
        app:leftText="返回"/>

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/waterfallLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:srlEnablePreviewInEditMode="true"
        app:srlEnableLoadMoreWhenContentNotFull="false">

        <com.scwang.smart.refresh.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlTextPulling="@string/srl_header_pulling"
            app:srlTextLoading="@string/srl_header_loading"
            app:srlTextRelease="@string/srl_header_release"
            app:srlTextFinish="@string/srl_header_finish"
            app:srlTextFailed="@string/srl_header_failed"
            app:srlTextUpdate="@string/srl_header_update"
            app:srlTextSecondary="@string/srl_header_secondary"
            app:srlTextRefreshing="@string/srl_header_refreshing"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/waterfall_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:background="@color/white"/>

        <com.scwang.smart.refresh.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlTextPulling="@string/srl_footer_pulling"
            app:srlTextRelease="@string/srl_footer_release"
            app:srlTextLoading="@string/srl_footer_loading"
            app:srlTextRefreshing="@string/srl_footer_refreshing"
            app:srlTextFinish="@string/srl_footer_finish"
            app:srlTextFailed="@string/srl_footer_failed"
            app:srlTextNothing="@string/srl_footer_nothing"/>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</LinearLayout>